feaat[Lab]: create scheme

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.7",
     "eslint-webpack-plugin": "^4.2.0",
     "ftp-deploy": "^2.4.7",
+    "polygon-offset": "^0.3.2",
     "three": "^0.165.0",
     "typescript-eslint-parser": "^21.0.2",
     "webpack-deadcode-plugin": "^0.1.17"
